nonPH_analysis/CCA/logs/archives/breps_cca373533.err
Traceback (most recent call last):
  File "/scratch/tyoeasley/brain_representations/src_py/run_CCA.py", line 2, in <module>
    import comp_brainrep_CCA as cbCCA
  File "/mnt/beegfs/scratch/tyoeasley/brain_representations/src_py/comp_brainrep_CCA.py", line 34
    def comp_CCA(X,Y)
                    ^
SyntaxError: invalid syntax
